修改分页操作 添加java后端实例 修改启动脚本

--- a/backend_of_java_for_save/src/main/resourses/application.properties
+++ b/backend_of_java_for_save/src/main/resourses/application.properties
@@ -37,4 +37,13 @@ logging.level.com.translator=DEBUG
 
 # Jackson配置
 spring.jackson.date-format=yyyy-MM-dd HH:mm:ss
-spring.jackson.time-zone=GMT+8 
+spring.jackson.time-zone=GMT+8
+
+# MyBatis Plus配置
+mybatis-plus.configuration.map-underscore-to-camel-case=true
+mybatis-plus.global-config.db-config.table-underline=true
+mybatis-plus.global-config.banner=false
+mybatis-plus.type-aliases-package=com.resume.entity
+
+# 调试SQL输出
+mybatis-plus.configuration.log-impl=org.apache.ibatis.logging.stdout.StdOutImpl 
